--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
         <div class="button" onclick="onClickRender()">
           Render
         </div>
+        <div class="button" onclick="onClickDownload()">
+          Download
+        </div>
       </div>
     </div>
   </body>
